Bug fix, spacing fix

--- a/Style.css
+++ b/Style.css
@@ -89,13 +89,11 @@ hr {margin: 7px 0px 0px 20px;
     max-height: 0;
 }
 
-.carddiv, .card{
-    width: 200px;
+.carddiv{
+    width: 250px;
     height: 350px;
     background-color: #bebebe;
-}
- .card{
-    margin: 0px 55px 0px 55px;
+    margin: 0px 22px 0px 22px;
 }
 
 .level{
@@ -155,14 +153,7 @@ footer
     margin-right: 40px;
 }
 
-.bildeavprosjektet
-{
-    height: 50%;;
-    background-color: black;
-}
-
 .cardimg
 {
-    height: 48.5%;
-    background-color: grey;
+    width: 250px;
 }
